--- a/app/views/supervisions/_supervision_supervision_feedback.html.haml
+++ b/app/views/supervisions/_supervision_supervision_feedback.html.haml
@@ -1,12 +1,13 @@
-.supervision_feedbacks
+.supervision_feedbacks_part
   %h2= t(".supervision_feedback", :default => "General feedback on supervision")
+
+  - if @supervision.supervision_feedback?
+    %p.waiting= t("waiting", :default => "Waiting for all feedbacks")
+
+    - unless @supervision.posted_supervision_feedback?(current_user)
+      = semantic_form_for([@supervision, SupervisionFeedback.new]) do |f|
+        = f.inputs do
+          = f.input :content, :hint => t(".supervision_feedback_content_hint", :default => "Provide feedback on current supervision")
+        = f.buttons :commit
+
   = render @supervision.supervision_feedbacks
-
-  - if @supervision.posted_supervision_feedback?(current_user)
-    %p= t("waiting", :default => "Waiting for others")
-  - else
-    = semantic_form_for([@supervision, SupervisionFeedback.new]) do |f|
-      = f.inputs do
-        = f.input :content, :hint => t(".supervision_feedback_content_hint", :default => "Provide feedback on current supervision")
-      = f.buttons :commit
-
