--- a/app/views/supervisions/_supervision_topic_question.html.haml
+++ b/app/views/supervisions/_supervision_topic_question.html.haml
@@ -3,18 +3,17 @@
   = render @supervision.topic
 .questions_part
   %h2= t(".questions", :default => "Questions")
+
   - if @supervision.topic_question?
     %p.waiting= t(".waiting", :default => "Waiting for others")
-    - unless @supervision.problem_owner?(current_user)
 
-      - unless @supervision.voted_on_next_step?(current_user)
-        = semantic_form_for([@supervision, Question.new]) do |f|
-          = f.inputs do
-            = f.input :content, :hint => t(".question_content_hint", :default => "Enter your questions regarding the topic")
-          = f.buttons do
-            = f.commit_button
-            %li= link_to(t(".no_more_questions", :default => "I have no more questions"), supervision_votes_path(@supervision), :method => :post)
+    - if !@supervision.problem_owner?(current_user) && !@supervision.voted_on_next_step?(current_user)
+      = semantic_form_for([@supervision, Question.new]) do |f|
+        = f.inputs do
+          = f.input :content, :hint => t(".question_content_hint", :default => "Enter your questions regarding the topic")
+        = f.buttons do
+          = f.commit_button
+          %li= link_to(t(".no_more_questions", :default => "I have no more questions"), supervision_votes_path(@supervision), :method => :post)
 
-  - if @supervision.topic_questions
-    = render @supervision.topic_questions
+  = render @supervision.topic_questions
 
