Small updates in bg-color and README

--- a/app/stylesheets/partials/_base.sass
+++ b/app/stylesheets/partials/_base.sass
@@ -30,7 +30,7 @@ $secondary-color-b-5: #6c9
 
 $blueprint-background-color: #fff
 
-$body-bg-color: #cff
+$body-bg-color: #f0f0ff
 
 $header-pagetitle-color: #000
 $header-pagetitle-hover-color: #f00
