--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -69,7 +69,7 @@ section > header
 section > footer
   +container
   +prepend-top
-  +border-radius($border-radius)
+  +border-top-radius($border-radius)
   +box-shadow
   +clearfix
   background-color: $blueprint-background-color
