small caption/text changes

--- a/app/views/pages/home_guest.html.haml
+++ b/app/views/pages/home_guest.html.haml
@@ -1,11 +1,11 @@
 %article
   %header
-    %h1= t(".title", :default => "Peer Supervision Groups")
+    %h1= t(".title", :default => "PeerGroup")
 
   %p
-    = t(".description", :default => "This is the live test site for the Peer Supervision Groups project for Patongo. Visit <a href='http://www.patongo.de/'>project page</a>.").html_safe
+    = t(".description", :default => "This is the live test site for the PeerGroup project for Patongo. Visit <a href='http://www.patongo.de/'>project page</a>.").html_safe
 
-  %h2= t(".about_title", :default => "About Peer Supervision Groups")
+  %h2= t(".about_title", :default => "About PeerGroup")
   = render 'about'
 
   %footer
