small changes caption/name

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,6 @@
 %header
   %hgroup
-    %h1= link_to "Peer Group Supervision", root_path
+    %h1= link_to "Peergroup", root_path
     %h2= @title
   %nav
     = t(".welcome", :default => "Welcome %{user_name}", :user_name => current_user.name) if signed_in?
