--- a/app/views/pages/home_member.html.haml
+++ b/app/views/pages/home_member.html.haml
@@ -6,7 +6,7 @@
     - Group.newest.each do |group|
       = render 'groups/group_brief', :group => group
 
-  %aside.sidebar.round
+  %aside.hergroups.round
     = render 'pages/user_info'
     %div= t(".your_groups", :default => "Your groups")
     - current_user.groups.each do |group|
