--- a/app/stylesheets/partials/_supervision.sass
+++ b/app/stylesheets/partials/_supervision.sass
@@ -14,13 +14,18 @@ $content-columns: $blueprint-grid-columns - 2 - 6
         background-color: #e0e0ee
       &.current_state
         background-color: #f0f0ff
-    li:first-child
-      +border-left-radius(5px)
-      border-left: 1px solid black
-      padding-left: 1em
-    li:last-child
-      +border-right-radius(5px)
-      padding-right: 1em
+      &:first-child
+        +border-left-radius(5px)
+        border-left: 1px solid black
+        padding-left: 1em
+      &:last-child
+        +border-right-radius(5px)
+        padding-right: 1em
+      input[type=submit]
+        border: none
+        background: transparent
+        margin: 0
+        padding: 0
   .topic, .question, .idea, .ideas_feedback, .solution, .solutions_feedback, .supervision_feedback
     overflow: hidden
     +append-bottom
