Extract topic selection from supervision session
 * Move topic selection to TopicsController
 * Add modify javascript to work on views/topics/index

--- a/app/stylesheets/partials/_supervision.sass
+++ b/app/stylesheets/partials/_supervision.sass
@@ -1,5 +1,5 @@
 $content-columns: $blueprint-grid-columns - 2 - 6
-#supervisions_show
+#supervisions_show,#topics_index
   .supervision_statusbar
     +reset_box_model
     +reset_list_style
