Add flexible workflow for supervision
Lots of changes here...
 * Redesign supervision.js file for handlign stepping back
 * Redesign routes
 * Move some translations away from :default option to en.yml
 * Update Socket.io for node.js

--- a/app/stylesheets/partials/_supervision.sass
+++ b/app/stylesheets/partials/_supervision.sass
@@ -27,6 +27,9 @@ $content-columns: $blueprint-grid-columns - 2 - 6
         margin: 0
         padding: 0
   .topic, .question, .idea, .ideas_feedback, .solution, .solutions_feedback, .supervision_feedback
+    textarea
+      height: 4em
+      line-height: 1em
     overflow: hidden
     +append-bottom
     +border-top-left-radius($border-radius)
