Change size of parts of supervision session elements
 * Change sizes of elements on finished supervision

--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -25,7 +25,7 @@ body
 a
   +hover-link
 
-section > header
+#page > header
   +container
   +border-bottom-radius($border-radius)
   +box-shadow
@@ -66,7 +66,7 @@ section > header
     a
       font-weight: bold
 
-section > footer
+#page > footer
   +container
   +prepend-top
   +border-top-radius($border-radius)
