--- a/app/views/solutions/_solution.html.haml
+++ b/app/views/solutions/_solution.html.haml
@@ -7,7 +7,7 @@
         .head
           %p= t(".rating", :default => "Rating")
         = form_for([@supervision, solution]) do |f|
-          - if @supervision.problem_owner?(current_user)
+          - if @supervision.problem_owner?(current_user) and !@supervision.finished?
             - 1.upto(5) do |i|
               = f.radio_button :rating, i, { :class => "star" }
             = f.submit t(".submit_rate", :default => "Rate")
