--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -1,3 +1,4 @@
 .user{ :class => ("you" if user == current_user) }
-  = link_to gravatar_for(user).html_safe, user
-  %p= link_to user, user, :title => user
+  = link_to user, :title => user do
+    = gravatar_for(user)
+    .name=  user
