Update color scheme for real rgb, change supervision boxes styles

--- a/app/stylesheets/partials/_base.sass
+++ b/app/stylesheets/partials/_base.sass
@@ -12,21 +12,21 @@ $blueprint-grid-width: ($blueprint-container-size + $blueprint-grid-margin) / $b
 $border-radius: 10px
 
 // http://colorschemedesigner.com/#3nd1Tw0w0w0w0
-$primary-color-1: #099
-$primary-color-2: #366
-$primary-color-3: #066
-$primary-color-4: #39c
-$primary-color-5: #6cc
-$secondary-color-a-1: #039
-$secondary-color-a-2: #339
-$secondary-color-a-3: #036
-$secondary-color-a-4: #36c
-$secondary-color-a-5: #69c
-$secondary-color-b-1: #0c3
-$secondary-color-b-2: #393
-$secondary-color-b-3: #063
-$secondary-color-b-4: #3c6
-$secondary-color-b-5: #6c9
+$primary-color-1: #04819e
+$primary-color-2: #206676
+$primary-color-3: #015367
+$primary-color-4: #38b2ce
+$primary-color-5: #60b9ce
+$secondary-color-a-1: #1435ad
+$secondary-color-a-2: #2c3e82
+$secondary-color-a-3: #071d70
+$secondary-color-a-4: #4867d6
+$secondary-color-a-5: #6e85d6
+$secondary-color-b-1: #00bf32
+$secondary-color-b-2: #248f40
+$secondary-color-b-3: #007c21
+$secondary-color-b-4: #38df64
+$secondary-color-b-5: #64df85
 
 $blueprint-background-color: #fff
 
