--- a/app/views/topics/_supervision_topics_votes.html.haml
+++ b/app/views/topics/_supervision_topics_votes.html.haml
@@ -1,13 +1,16 @@
-.topic_votes_part
-  %h2= t("supervisions.show.topic_votes")
+%section.topic_votes_part
+  %header
+    %h1= t("supervisions.show.topic_votes")
 
   - if @supervision.voting_on_topics?
-    %p.waiting= t("supervisions.show.topic_votes_waiting", :default => "Waiting for all votes")
+    %p.waiting= t("supervisions.show.topic_votes_waiting")
 
-    - @supervision.topics.each do |topic|
-      %div[topic]
-        = render topic.user
-        .content
-          %p= topic_content(topic)
-          = form_for([@supervision, topic, Vote.new]) do |f|
-            = f.submit t("supervisions.show.submit_vote", :default => "Vote"), :disabled => @supervision.voted_on_topic?(current_user)
+    .list
+      - @supervision.topics.each do |topic|
+        %div[topic]
+          = render topic.user
+          .content
+            %p= topic_content(topic)
+          .vote
+            = form_for([@supervision, topic, Vote.new]) do |f|
+              = f.submit t("topics.index.topic_vote"), :disabled => @supervision.voted_on_topic?(current_user)
